<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EscapeAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_button">Play</string>
    <string name="edit_button">Game Editor</string>
    <string name="credits_button">Credits</string>
    <string name="levels">Levels</string>
    <string name="level1">Level 1</string>
    <string name="level">Level</string>
    <string name="descriptionAddition">Image of addition logo</string>
    <string name="descriptionSub">Image of sub logo</string>
    <string name="descriptionSave">Image of save logo</string>
    <string name="title_activity_select_file">SelectFile</string>

    <string name="run">Run all</string>
    
    <string name="clean">Clean</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
        
    <string name="existing_map">From existing map</string>
    <string name="ok">Ok</string>
	<string name="from_file">Or from a file (need a file selector)</string>
	<string name="select_file">Select file</string>
    
    <string name="enemy1">enemy1</string>
    <string name="enemy2">enemy2</string>
    <string name="enemy3">enemy3</string>
    <string name="enemy4">enemy4</string>
    
    <string-array name="planets_array">
        <item>Earth</item>
        <item>Jupiter</item>
        <item>Moon</item>
    </string-array>


        

</resources>