<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/defaultLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_menu"
    android:baselineAligned="false"
    tools:context=".LevelsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/levels_layout_top"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="62dp"
                android:text="@string/levels"
                android:textColor="@android:color/background_dark"
                android:textSize="28sp" />
        </RelativeLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:background="@color/grey"
            android:columnCount="4"
            android:orientation="horizontal"
            android:rowCount="1" >

            <ImageView
                android:id="@+id/sub_button"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:contentDescription="@string/descriptionSub"
                android:src="@drawable/moins" />

            <ImageView
                android:id="@+id/add_button"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:contentDescription="@string/descriptionAddition"
                android:src="@drawable/plus" />
        </GridLayout>
    </LinearLayout>

</LinearLayout>